--- a/02_HTMLとCSSを極める（トランジション編）/050_positionとz-indexについて学ぼう/style.css
+++ b/02_HTMLとCSSを極める（トランジション編）/050_positionとz-indexについて学ぼう/style.css
@@ -1,7 +1,7 @@
 #container {
   padding: 1rem;
-  background-color: gray;
-  position: static;
+  position: relative;
+  background: gray;
 }
 
 div {
@@ -10,7 +10,8 @@ div {
   font-size: 1.1em;
   width: 150px;
   height: 150px;
-  box-shadow: 7px 7px 0 0 #000;
+  -webkit-box-shadow: 7px 7px 0 0 #000;
+          box-shadow: 7px 7px 0 0 #000;
 }
 
 .div-1 {
@@ -18,19 +19,25 @@ div {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 20;
 }
+
 .div-2 {
   background: tomato;
   position: relative;
   z-index: 30;
 }
+
 .div-3 {
   background: teal;
   z-index: 50;
 }
+
 .div-4 {
   width: 80px;
   height: 80px;
+  top: 40px;
+  position: absolute;
   background-color: violet;
+  z-index: 100;
 }
+/*# sourceMappingURL=style.css.map */
